# demo-everything

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-by-cmake-ninja.sh  coding-style.sh  configure
backup/eguard-device/: README.md  boot.py
backup/eguard-device/.git-backup/: config  index  packed-refs
backup/router-app/: pubspec.yaml
backup/router-app/.git-backup/: COMMIT_EDITMSG  config  index  packed-refs
backup/router-app/lib/: main.dart
backup/xlab-device/: .gitignore-backup  README.md  board.py  install.sh  requirements.txt  uninstall.sh  xlab-core.py
backup/xlab-device/.git-backup/: ORIG_HEAD  config  index  packed-refs
cmake-ninja-demo/: CMakeLists.txt  README.md  build.sh
demo/apue/: README.md  demo.drawio
demo/apue/Uint-15/: my_pipe_1.c
demo/apue/Unit-3/: my_io.c  (+1 more)
demo/cmake-ninja-demo/: demo.c
demo/cpp-20/: Makefile  coding-style.sh
demo/data-visualization/: demo.py
demo/math/: bezier.py  lineregress.cc
demo/skynet/: dump.rdb
demo/thread-pool/: thpool.h
gui/remi/: index.service  uninstall.sh
include/: fifo.h  hsv_rgb.h  list.h  mm.h  stack.h  string.h  types.h
include/sokoban/: box.h  human.h  map.h  sokoban.h
lib/: Makefile  fifo.c  hsv_rgb.c  mm.c  string.c
net/tcp-server/: install.sh  tcp-server.c  tcp-server.service
points/apue/: README.md
points/cpp-20/: .clang-format  Makefile  coroutine-2.cc  coroutine.cc  lambda.cc
points/data-visualization/: env.sh
points/skynet-debug/: config.test
points/thread-pool/: Makefile  example.c  thpool.c
sokoban/: Makefile  human.c  map.c
src/: Makefile  sokoban.c
(+451 files in other folders)
